# erp-bot-crypto

./: .gitignore  .pre-commit-config.yaml  docker-bake.hcl  docker-compose.prod.build.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt
backend/: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.daemon  Makefile  crontab  db_auto_gen.sh  db_gen.sh  db_up.sh  example.http  go.mod  go.sum  main.go  modd.conf  requirements.txt  setup.cfg  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 1e8c8f3fefb7_first_migration.py  2023_04_17_1343-3b381995c5b5_first_migration.py  2023_04_17_1344-6c63057e83e1_insert_admin.py  692de4c25287_initial_migration.py  (+29 more)
backend/controller/: auth.go  data_collector.go  error.go  guards.go  user.go
backend/docker/: Dockerfile.api.dev  Dockerfile.api.prod  Dockerfile.daemon  crontab  daemon-entry-point.sh
backend/examples/: bybit.http  users.http
backend/middleware/: authorization.go
backend/migrations/: 00001_init_db.sql  00002_admin_and_initial_transactions.sql  00003_list_api_keys_permission.sql  00004_commission.sql  00005_daemon_runs.sql  00006_run_permission.sql  00007_permission_comission.sql  00008_fix_closepsql.sql
backend/model/: config.go  roles.go  user.go
backend/repository/: repository.go  role.go  role_psql.go  user.go  user_memory.go  user_psql.go  user_repo_memory.go  user_repo_psql.go
backend/scrapper/: scrapper.go
backend/src/: create_admin.sh  daemon.py  exemplo.py  main.py  models.py  server.py
backend/store/: psql_api_key.go  psql_config.go  psql_role.go  psql_user.go  stores.go
(+97 files in other folders)
