[metadata]
name = bot-erp-backend
version = 0.1.0
author = Valdemar Ceccon
author_email = valdemar.ceccon@gmail.com
description = Your FastAPI backend application
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    fastapi
    uvicorn
    asyncpg
    sqlalchemy
    alembic
    bcrypt
    python-multipart
python_requires = >=3.10

[options.packages.find]
where = src

